// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> renders a component by applying large 1`] = `
<div>
  <a
    class="Textweb__Text-sc-6jf9e4-0 Linkweb__Anchor-sc-1u7mgfj-0 XYnTh"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some link
  </a>
</div>
`;

exports[`<Link /> renders a component by applying medium 1`] = `
<div>
  <a
    class="Textweb__Text-sc-6jf9e4-0 Linkweb__Anchor-sc-1u7mgfj-0 ivwiUL"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some link
  </a>
</div>
`;

exports[`<Link /> renders a component by applying small 1`] = `
<div>
  <a
    class="Textweb__Text-sc-6jf9e4-0 Linkweb__Anchor-sc-1u7mgfj-0 liGcEz"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some link
  </a>
</div>
`;

exports[`<Link /> renders a link 1`] = `
<div>
  <a
    class="Textweb__Text-sc-6jf9e4-0 Linkweb__Anchor-sc-1u7mgfj-0 ivwiUL"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some link
  </a>
</div>
`;
